<resources>
    <string name="app_name">Schedule</string>
    <string name="search">Search</string>
    <string name="label_from">From:</string>
    <string name="input_from">Source</string>
    <string name="input_to">Destination</string>
    <string name="label_to">To:</string>
    <string name="waiting_text">Loading. Please wait…</string>
    <string name="settings_title">Settings</string>
    <string name="search_result_title">Connections</string>
    <string name="day_short">d</string>
    <string name="label_departure">Departure Time:</string>
    <string name="oppositeDirection">Opposite Direction</string>
    <string name="label_about">About</string>
    <string name="label_developers">Developers:</string>
    <string name="developerNameText" translatable="false">Sandro Zbinden \nsandro.zbinden@hsr.ch \n\nMichael Leu \nmichael.leu@hsr.ch \n \nNiklaus Tschirky \nniklaus.tschirky@hsr.ch</string>
    <string name="error_search_incomplete">Please provide from and to.</string>
    <string name="label_date">Date:</string>
    <string name="label_arrival">Arrival Time:</string>
    <string name="radio_departure">Departure</string>
    <string name="radio_arrival">Arrival</string>
    <string name="label_take_me_home">Take me home address:</string>
    <string name="input_take_me_home">My address</string>
    <string name="setting_name" translatable="false">io.github.imsmobile.fahrplan.settings</string>
    <string name="setting_transportation_train" translatable="false">io.github.imsmobile.fahrplan.settings.transportation.train</string>
    <string name="setting_transportation_tram" translatable="false">io.github.imsmobile.fahrplan.settings.transportation.tram</string>
    <string name="setting_transportation_bus" translatable="false">io.github.imsmobile.fahrplan.settings.transportation.bus</string>
    <string name="setting_transportation_ship" translatable="false">io.github.imsmobile.fahrplan.settings.transportation.ship</string>
    <string name="setting_classes_first" translatable="false">io.github.imsmobile.fahrplan.settings.classes.first</string>
    <string name="setting_classes_second" translatable="false">io.github.imsmobile.fahrplan.settings.classes.second</string>
    <string name="setting_key_take_me_home" translatable="false">setting_take_me_home</string>
    <string name="button_take_me_home">Take me home</string>
    <string name="error_missing_take_me_home">Take me home address not configured.</string>
    <string name="label_favorite_add">Add to Favorites</string>
    <string name="label_favorite_remove">Remove from Favorites</string>
    <string name="setting_favorites" translatable="false">setting_favorites</string>
    <string name="label_transportations">Transportations:</string>
    <string name="cb_train">&#128646; Train</string>
    <string name="cb_tram">&#128651; Tram</string>
    <string name="cb_bus">&#128652; Bus</string>
    <string name="cb_boat">&#128674; Ship</string>
    <string name="sourcefiles_text">Sourcefiles available under:\nhttps://github.com/IMSmobile/Fahrplan</string>
    <string name="transport_app_name" translatable="false">Transport APP</string>
    <string name="appiconimage" translatable="false">appIconImage</string>
    <string name="label_connection">Connection</string>
    <string name="label_share">Share</string>
    <string name="connection_on_track">on track</string>
    <string name="connection_heading_to">heading to</string>
    <string name="label_classes">Show occupancy for:</string>
    <string name="cb_firstclass">First Class</string>
    <string name="cb_secondclass">Second Class</string>
    <string name="icon_train" translatable="false">&#128646;</string>
    <string name="icon_tram" translatable="false">&#128651;</string>
    <string name="icon_bus" translatable="false">&#128652;</string>
    <string name="icon_boat"  translatable="false">&#128674;</string>
    <string name="icon_rightward_arrow" translatable="false">&#10140;</string>
    <string name="icon_occupancy" translatable="false">&#9601;</string>
    <string name="icon_oppositeDirection" translatable="false">&#128256;</string>
    <string name="icon_home" translatable="false">&#127968;</string>
</resources>
