<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.imsmobile.fahrplan.MainActivity">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_layout"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
        android:text="@string/label_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/label_from"
        android:labelFor="@+id/input_from"/>

        <LinearLayout
            android:id="@+id/row_from"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text=""
            android:textSize="18sp"
            android:hint="@string/input_from"
            android:id="@+id/input_from"
                android:layout_weight="2" />

            <Button
                android:id="@+id/oppositeButton"
                android:background="@android:color/transparent"
                android:contentDescription="@string/oppositeDirection"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            </LinearLayout>

        <TextView
        android:text="@string/label_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/input_to"
        android:id="@+id/label_to"/>

        <LinearLayout
            android:id="@+id/row_to"
            android:orientation="horizontal"
            android:layout_below="@+id/label_to"
            android:layout_alignStart="@+id/label_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text=""
                android:textSize="18sp"
                android:hint="@string/input_to"
                android:id="@+id/input_to"
                android:layout_weight="2" />

            <Button
                android:id="@+id/btn_take_me_home"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_take_me_home"
                android:text=""
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:text="@string/label_departure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row_to"
            android:layout_alignStart="@+id/row_to"
            android:labelFor="@+id/input_to"
            android:inputType="none"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_tune_black_24px"
            android:drawablePadding="2sp"
            android:onClick="showTimePickerDialog"
            android:id="@+id/label_departure" />

        <Button
            android:text="@string/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_search"
            android:layout_below="@+id/label_departure"
            android:layout_alignParentStart="true" />

        <ListView
            android:id="@+id/list_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_search"/>

    </LinearLayout>

</RelativeLayout>
