<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RadioGroup
        android:layout_width="fill_parent"
        android:id="@+id/radio_group_departure_arrival"
        android:checkedButton="@+id/radio_departure"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_departure" />
        <RadioButton android:id="@+id/radio_arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_arrival"
            />
    </RadioGroup>

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group_departure_arrival"
        android:layout_alignParentStart="true"
        android:timePickerMode="spinner"
        android:layout_centerHorizontal="true"
        android:id="@+id/timePicker" />


    <TextView
        android:text="@string/label_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:layout_below="@+id/timePicker"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_tune_black_24px"
        android:id="@+id/label_date" />




</RelativeLayout>